--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -19,7 +19,7 @@
             $scope.data = {};
 
             $scope.afterSave = function (data, defaultcallback) {
-                add_message('your profile was saved', 'success')
+                add_message('your profile has been saved', 'success')
             }
 
             $scope.amidLoad = function (data, defaultcallback) {
