--- a/profapp/templates/partials/base_profireader.html
+++ b/profapp/templates/partials/base_profireader.html
@@ -49,8 +49,7 @@
                         <ul class="user-auth">
                             <li><a href="{{ url_for('auth.login_signup_endpoint') + '?login_signup=login' }}">{{ _('Log
                                 In') }}</a></li>
-                            <li>
-                                <a href="{{ url_for('auth.login_signup_endpoint') + '?login_signup=signup' }}">{{ _('Sign
+                            <li><a href="{{ url_for('auth.login_signup_endpoint') + '?login_signup=signup' }}">{{ _('Sign
                                     Up') }}</a></li>
                         </ul>
                     </li>
