--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -47,7 +47,7 @@
              ng-model="data">
             <div class="row company">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 link-page">
-                    <h5>Launch portal</h5>
+                    <h5>{{ _('Launch portal') }}</h5>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 create-new-company">
 
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="row add-division-style">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4"><h3>Portal divisions</h3></div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4"><h3>{{ _('Portal divisions') }}</h3></div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 label-division">
                     <button class="pull-right" type="button" ng-click="addDivision()"><i class="fa fa-plus"></i> {{
                         _('add division') }}
