--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -113,7 +113,7 @@
 
     <div ng-controller="article_list" ng-cloak>
        <!-- <h2>{{ _('Publications at portal `%(data.portal.name)s` (of company `%(data.company.name)s`)')}}</h2> -->
-        <h2>Publications at portal</h2>
+        <h2>{{ _('Publications at portal') }}</h2>
         <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1"></div>
     </div>
     {% endraw %}
