--- a/profapp/templates/admin/ips.html
+++ b/profapp/templates/admin/ips.html
@@ -6,10 +6,10 @@
 
 
     <script type="text/ng-template" id="delete_ips.html">
-        <div class='modal-header'><h4>Do you want delete this rows?</h4></div>
+        <div class='modal-header'><h4>{{ _('Do you want delete this rows?') }}</h4></div>
         <div class='modal-footer'>
-            <button id='buttonDelete' class='btn btn-warning' ng-click='deleteItems()'>Delete</button>
-            <button id='buttonClose' class='btn btn-primary' ng-click='cancel()'>Close</button>
+            <button id='buttonDelete' class='btn btn-warning' ng-click='deleteItems()'>{{ _('Delete') }}</button>
+            <button id='buttonClose' class='btn btn-primary' ng-click='cancel()'>{{ _('Close') }}</button>
         </div>
     </script>
 
@@ -133,7 +133,7 @@
         </div>
         <a ng-show="load_contr && !areAllEmpty(datas.grid_data)" class="btn btn-danger"
            ng-class="{'disabled': ( isSelectedRows === false )}" style="text-align: center"
-           ng-click="showModalDelete()">Delete selected rows</a>
+           ng-click="showModalDelete()">{{ _('Delete selected rows') }}</a>
 
 
     </div>
