--- a/profapp/templates/partials/head.html
+++ b/profapp/templates/partials/head.html
@@ -31,10 +31,14 @@
 <link href="//static.profireader.com/static/front/bird/css/article.css" rel="stylesheet">
 <link href="//static.profireader.com/static/front/bird/css/style.css" rel="stylesheet">
 
+{{ config_variables()|safe }}
 
 <script src="//static.profireader.com/static/jquery/jquery.min.js"></script>
 <script src="//static.profireader.com/static/jquery/jquery-ui.min.js"></script>
 
 <script src="//static.profireader.com/static/js/profireader.js"></script>
 <script src="//static.profireader.com/static/js/front.js"></script>
+
+<script src="//static.profireader.com/static/new/moment/moment.min.js"></script>
+<script src="//static.profireader.com/static/new/moment/uk.js"></script>
 
