--- a/profapp/templates/index_layout.html
+++ b/profapp/templates/index_layout.html
@@ -124,7 +124,7 @@
 {% endblock navbar %}
 
 {% block portal_base %}
-    {% include 'partials/portal_base_Profireader.html' %}
+    {% include 'partials/bak.portal_base_Profireader.html' %}
 {% endblock portal_base %}
 
 {% block content %}
