--- a/profapp/templates/auth/reset_password_token.html
+++ b/profapp/templates/auth/reset_password_token.html
@@ -1,23 +1,41 @@
 {% extends "index_lazy_layout.html" %}
 
 {% block title %}Profireader - Articles list{% endblock title %}
-{% block head %}
-    {{ super() }}
-{% endblock head %}
+
 {% block portal_content %}
-    <div ng-controller="UserLoginController" ng-cloak class="row">
+<script>
+    module.controller('resetpassword_token',  function($scope, $ok){
+      $scope.$$translate = {{ translates('resetpassword_token')|safe }};
+      $scope.password_reset_request = {{ raw_url_for('auth.password_reset_change')|safe }}
+      $scope.token = '{{ token }}';
+      $scope.data = {}  ;
+
+      $scope.reset_password = function(data) {
+          return $ok($scope.password_reset_request({token:$scope.token}), {'data': data}, function(resp){
+              console.log(resp)
+              if(resp === true){
+                  add_message('You update your email!', 'info', 3000)
+                  window.location.href = '{{ url_for('auth.login_signup_endpoint') + '?login_signup=login' }}'
+              }else{
+                  add_message(resp,'warning')
+              }
+          })
+      }
+    });
+</script>
+    <div ng-controller="resetpassword_token" ng-cloak class="row">
         <div>
             <h1 class="nice-title">{{ _('Reset Your Password')}}<span></span></h1>
         </div>
-        <form name="formLogin" class="register-form-profirider" action="{{ url_for('auth.password_reset_change', token=token) }}" method="post">
-            <input pr-test="RegEmail" class="form-control" type="email" placeholder="email" required name="email"
+        <form name="formLogin" class="register-form-profirider" method="post" ng-model="data">
+            <input pr-test="RegEmail" class="form-control" type="email" placeholder="email" required name="email" ng-model="data.email"
                    ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/">
             <div ng-show="formLogin.email.$error.pattern" class="error-input">The email not validate!</div>
-            <input pr-test="RegPass" class="form-control" type="password" placeholder="password" required
+            <input pr-test="RegPass" class="form-control" type="password" placeholder="password" required ng-model="data.password"
                    name="password">
-            <input pr-test="RegRepeatPass" class="form-control" type="password" placeholder="repeat password" required
+            <input pr-test="RegRepeatPass" class="form-control" type="password" placeholder="repeat password" required ng-model="data.password1"
                    name="password1">
-            <input pr-test="RegSubmit" class="submit-form" type="submit">
+            <input pr-test="RegSubmit" class="submit-form" type="submit" ng-click="reset_password(data)">
         </form>
     </div>
 {% endblock portal_content %}
