--- a/profapp/templates/general/portals_list.html
+++ b/profapp/templates/general/portals_list.html
@@ -23,6 +23,14 @@
                                 }
                             })
                         }
+                        if(resp === true){
+                            add_message('You have successfully subscribed to this portal', 'info', 3000)
+                            $timeout(function(){
+                                window.location.href = '{{ url_for('reader.list_reader') }}'
+                            }, 1500)
+                        }else {
+                            add_message(resp, 'warning', 3000)
+                        }
                     });
                 {% else %}
                     window.location.href = {{ raw_url_for('general.auth_before_subscribe_to_portal')|safe }}({portal_id: portal_id});
