--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -56,6 +56,10 @@
                 window.location.href = $scope.url_update_material({'material_id': material_id})
             };
 
+            $scope.get_local_time = function (date) {
+                return moment(date).format('Do MMMM YYYY, H:mm:ss');
+            };
+
 
             $scope.grid_action = function (id, action, row, column_name) {
                 'use strict'
@@ -145,8 +149,8 @@
     <div ng-controller="material_details" ng-cloak>
         {% raw %}
         <h2>{{ _('Material details `%(title)s`', {title: data.material.title}) }}</h2>
-        <h4>{{ _('Created at') }} {{data.material.cr_tm}}</h4>
-        <h4>{{ _('Last modified at') }} {{data.material.md_tm}}</h4>
+        <h4>{{ _('Created at') }} {{get_local_time(data.material.cr_tm)}}</h4>
+        <h4>{{ _('Last modified at') }} {{get_local_time(data.material.md_tm)}}</h4>
         <hr/>
         <button pr-user-can="data.actions.EDIT" class="btn fr" ng-click="updateMaterial(data.material.id)
         ">{{ _('Update material') }}</button>
