--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -26,7 +26,7 @@
             var trusted = {};
 
             $scope.get_local_time = function (date) {
-                return moment(date).format();
+                return moment(date).format('Do MMMM YYYY, H:mm:ss');
             };
 
 {#            $scope.getPopoverContent = function(article) {#}
