--- a/profapp/templates/general/user_profile.html
+++ b/profapp/templates/general/user_profile.html
@@ -35,8 +35,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 line-user-info">{{ _('Birthday:') }}</div>
-                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.birth_tm, 'dddd, LL')
-                                    }}</div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.birth_tm)}}</div>
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 line-user-info">{{ _('Gender:') }}</div>
@@ -65,8 +64,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 line-user-info">{{ _('Member since:') }}</div>
-                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.registered_tm, 'dddd, LL
-                             hh:mm') }}</div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.registered_tm) }}</div>
                         </div>
                     </div>
                 </div>
