--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -1,5 +1,5 @@
 {% extends "_ruslan/_index_layout.html" %}
-{% block title %}{{ _('Profireader reader list') }}{% endblock title %}
+{% block title %}Profireader{% endblock title %}
 
 {% block portal_content %}
     {% include '_ruslan/reader/_reader_nav.html' %}
