--- a/profapp/templates/front/bird/subscribe_to_portal.html
+++ b/profapp/templates/front/bird/subscribe_to_portal.html
@@ -1,2 +1,2 @@
-<a target="profireader_subscribe" href={{ "//profireader.com"}}><img
+<a target="profireader_subscribe" href={{ "//profireader.com/auth/login_signup/?login_signup=login"}}><img
      style="width: 5%" src="//static.profireader.com/static/front/img/profireader_simple_logo.png" /></a>
