--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -1,6 +1,6 @@
 {% extends "index_lazy_layout.html" %}
 
-{% block title %}Profireader - Articles list{% endblock title %}
+{% block title %}Profireader - help{% endblock title %}
 {% block head %}
     {{ super() }}
 {% endblock head %}
