--- a/profapp/templates/front/bird/subscribe_to_portal.html
+++ b/profapp/templates/front/bird/subscribe_to_portal.html
@@ -1,2 +1,8 @@
-<a target="profireader_subscribe" href={{ "//profireader.com/auth/login_signup/?login_signup=login"}}><img
-     style="width: 5%" src="//static.profireader.com/static/front/img/profireader_simple_logo.png" /></a>
+
+{% if g.user %}
+    <a target="profireader_subscribe" href={{ "//profireader.com/company/560b9f54-1727-4001-bda8-784be5762873/profile/"}}><img
+     style="width: 35px" src="//static.profireader.com/static/front/img/profireader_simple_logo.png" /></a>
+{% else %}
+    <a target="profireader_subscribe" href={{ "//profireader.com/auth/login_signup/?login_signup=login"}}><img
+     style="width: 35px" src="//static.profireader.com/static/front/img/profireader_simple_logo.png" /></a>
+{% endif %}
