--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -97,7 +97,7 @@
                         <div style="width: 400px; height: 300px; position: relative" pr-cropa="data.logo"
                              pr-crop-coordinates="coordinates"
                              pr-crop-image-url="fileUrl(data.logo.selected_by_user.image_file_id)"></div>
-                        {{ coordinates }}
+                        {{ rect }}
                     </div>
 
                 </div>
