fix some styles in profi-r

--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -243,6 +243,7 @@ body {
   }
   a:hover {
     transition: @transition;
+    color: #FFF;
   }
   ul {
     position: absolute;
@@ -330,25 +331,33 @@ body {
 
 .microsoft-icon {
   display: inline;
-  color: #26AAE1;
+  i{
+    color: #26AAE1;
+  }
 }
 
 .google-icon {
-  color: @color-red-btn;
+  i{
+      color: @color-red-btn;
+  }
   display: inline;
   margin-right: 10px;
 }
 
 .linkedin-icon {
   display: inline;
-  color: #0177B5;
+  i{
+    color: #0177B5;
+  }
   margin-right: 10px;
 
 }
 
 .facebook-icon {
   display: inline;
-  color: #3B569D;
+  i{
+    color: #3B569D;
+  }
   margin-right: 10px;
 
 }
@@ -386,7 +395,7 @@ body {
   }
 }
 
-.register-form-profirider {
+.register-form-profireader {
   margin-top: 15px;
   input {
     margin-bottom: 10px;
