--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -199,6 +199,7 @@ body {
 }
 .menu-site a:hover {
   transition: all 0.2s ease-out;
+  color: #FFF;
 }
 .menu-site ul {
   position: absolute;
@@ -278,17 +279,17 @@ body {
 }
 .linkedin-icon {
   display: inline;
+  margin-right: 10px;
 }
 .linkedin-icon i {
   color: #0177B5;
-  margin-right: 10px;
 }
 .facebook-icon {
   display: inline;
+  margin-right: 10px;
 }
 .facebook-icon i {
   color: #3B569D;
-  margin-right: 10px;
 }
 .auth-form {
   padding-top: 30px;
@@ -320,13 +321,13 @@ body {
   transition: all 0.2s ease-out;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.register-form-profirider {
+.register-form-profireader {
   margin-top: 15px;
 }
-.register-form-profirider input {
+.register-form-profireader input {
   margin-bottom: 10px;
 }
-.register-form-profirider .sabmit-form {
+.register-form-profireader .sabmit-form {
   background-color: #00c853;
   border: 0;
   color: #fff;
@@ -334,7 +335,7 @@ body {
   padding: 10px;
   width: 100%;
 }
-.register-form-profirider .sabmit-form:hover {
+.register-form-profireader .sabmit-form:hover {
   background-color: #00e676;
   transition: all 0.2s ease-out;
 }
