--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -330,6 +330,9 @@ body {
 }
 
 .microsoft-icon {
+   a:hover{
+      text-decoration: none;
+  }
   display: inline;
   i{
     color: #26AAE1;
@@ -337,6 +340,9 @@ body {
 }
 
 .google-icon {
+  a:hover{
+      text-decoration: none;
+  }
   i{
       color: @color-red-btn;
   }
@@ -345,6 +351,9 @@ body {
 }
 
 .linkedin-icon {
+   a:hover{
+      text-decoration: none;
+  }
   display: inline;
   i{
     color: #0177B5;
@@ -354,6 +363,9 @@ body {
 }
 
 .facebook-icon {
+   a:hover{
+      text-decoration: none;
+  }
   display: inline;
   i{
     color: #3B569D;
