--- a/profapp/static/front/spring/css/style.css
+++ b/profapp/static/front/spring/css/style.css
@@ -17,7 +17,7 @@
 }
 .search-block {
   padding-top: 15px;
-  background: url("../../../images/vertical_cloth.png");
+  background-color: #FCFCFC;
   padding-bottom: 21px;
 }
 .search-block input {
@@ -40,13 +40,13 @@
   padding-left: 0;
 }
 .logo-portal {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  border-bottom: 2px solid #FF5252;
   z-index: 500;
   margin-top: -70px;
   width: 225px;
-  border-right: 2px solid #2E3137;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   position: fixed;
-  background: url("../../../images/vertical_cloth.png");
+  background-color: #FCFCFC;
   color: #fff;
 }
 .logo-portal img {
@@ -57,7 +57,7 @@
 }
 .left-menu {
   color: #fff;
-  background-color: #FF5252;
+  background-color: #212121;
   height: 100%;
   position: fixed;
   overflow-y: auto;
@@ -69,30 +69,29 @@
 .left-menu ul {
   padding-left: 0;
 }
-.left-menu a:not(:first-child),
-.left-menu li {
+.left-menu .spec {
   list-style: none;
   display: block;
+  padding: 12px 16px;
 }
-.left-menu a:not(:first-child):hover,
-.left-menu li:hover {
-  background-color: #212121;
+.left-menu .spec:hover {
+  background-color: #FF5252;
   transition: all 0.2s ease-out;
 }
 .left-menu .user-prof {
   padding-top: 15px;
   background-color: #FCFCFC;
-  background: url("../../../images/kindajean.png");
 }
 .left-menu .user-prof img {
   border-radius: 50%;
   width: 50%;
 }
 .left-menu .user-prof p {
+  padding: 5px;
   margin-bottom: 0;
   text-align: center;
   margin-top: 10px;
-  background-color: #212121;
+  background-color: #FF5252;
   color: #fff;
 }
 .footer-portal {
@@ -139,12 +138,32 @@
   background-color: #0a4b3e;
 }
 .fixed-nav {
-  background: url("../../../images/vertical_cloth.png");
   margin-left: 225px;
   border: 0;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  background-color: #FCFCFC;
+  border-bottom: 2px solid #FF5252;
 }
 .spec {
   padding: 0;
+}
+.no-login-user {
+  padding-top: 15px;
+  background-color: #FCFCFC;
+  text-align: center;
+}
+.no-login-user i {
+  color: #FCFCFC;
+  border-radius: 50%;
+  border: 2px solid #FF5252;
+  padding: 20px 25px;
+  background-color: #FF5252;
+}
+.no-login-user p {
+  padding: 5px;
+  margin-bottom: 0;
+  text-align: center;
+  margin-top: 10px;
+  background-color: #FF5252;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
