--- a/profapp/static/front/spring/css/style.css
+++ b/profapp/static/front/spring/css/style.css
@@ -1,4 +1,11 @@
 /*CONST*/
+body a {
+  color: #039be5;
+}
+body a:hover {
+  color: #0c6dc4;
+  text-decoration: none;
+}
 .block-center {
   display: block;
   margin: 0 auto;
@@ -14,6 +21,7 @@
 .portal-body {
   background-color: #FCFCFC;
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
 .search-block {
   padding-top: 15px;
@@ -21,6 +29,7 @@
   padding-bottom: 21px;
 }
 .search-block input {
+  font-family: 'Roboto', sans-serif;
   border-radius: 0;
 }
 .search-block input:active,
@@ -73,6 +82,7 @@
   list-style: none;
   display: block;
   padding: 12px 16px;
+  font-family: 'Roboto', sans-serif;
 }
 .left-menu .spec:hover {
   background-color: #FF5252;
@@ -87,12 +97,14 @@
   width: 50%;
 }
 .left-menu .user-prof p {
+  font-family: 'Roboto', sans-serif;
   padding: 5px;
   margin-bottom: 0;
   text-align: center;
   margin-top: 10px;
   background-color: #FF5252;
   color: #fff;
+  border-bottom: 1px solid #191818;
 }
 .footer-portal {
   margin-top: 50px;
@@ -133,6 +145,7 @@
   margin-bottom: 100px;
   width: 100%;
   padding-left: 227px;
+  margin-top: -70px;
 }
 .advertising-block {
   background-color: #0a4b3e;
@@ -159,11 +172,48 @@
   background-color: #FF5252;
 }
 .no-login-user p {
+  font-family: 'Roboto', sans-serif;
   padding: 5px;
   margin-bottom: 0;
   text-align: center;
   margin-top: 10px;
   background-color: #FF5252;
   color: #fff;
+  border-bottom: 1px solid #191818;
+}
+.block-item {
+  margin-left: 30px;
+  margin-top: 30px;
+  border: 1px solid #fff;
+}
+.block-item-img {
+  width: 30%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.subportal-about {
+  padding: 30px;
+}
+.subportal-about h2 {
+  color: #FF5252;
+}
+.subportal-about img {
+  width: 100%;
+  height: auto;
+}
+.subportal-about .logo-sub {
+  width: 10%;
+  float: right;
+}
+@media (max-width: 970px) {
+  .subportal-about .logo-sub {
+    width: 20%;
+  }
+}
+@media (max-width: 750px) {
+  .subportal-about .logo-sub {
+    width: 100%;
+    float: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
