--- a/profapp/templates/front/spring/layout.html
+++ b/profapp/templates/front/spring/layout.html
@@ -9,11 +9,11 @@
 
 
 <!-- Custom CSS -->
-<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet'
-      type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,cyrillic,cyrillic-ext,latin-ext'
-      rel='stylesheet' type='text/css'>
-
+{#<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic' rel='stylesheet'#}
+{#      type='text/css'>#}
+{#<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,cyrillic,cyrillic-ext,latin-ext'#}
+{#      rel='stylesheet' type='text/css'>#}
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,500italic,400italic,300&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 {#<link href="//static.profireader.com/static/front/css/bootstrap-social.css" rel="stylesheet">#}
 <link href="//static.profireader.com/static/front/css/font-awesome.css" rel="stylesheet">
 {#<link href="//static.profireader.com/static/front/css/style.css" rel="stylesheet">#}
@@ -42,12 +42,19 @@
         <div>
             {% include 'menu_portal.html' %}
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 news-content">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
         {% include 'header.html' %}
-            {% block portal_content %}{% endblock %}
+{#            {% block portal_content %}{% endblock %}#}
 {#            {% include 'advertising.html' %}#}
         </div>
     </div>
+
+<div class="row content-block">
+<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 news-content">
+            {% block portal_content %}{% endblock %}
+{#            {% include 'advertising.html' %}#}
+        </div>
+</div>
  {% include 'footer.html' %}
 </div>
 
