--- a/profapp/templates/front/spring/subportal.html
+++ b/profapp/templates/front/spring/subportal.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% block portal_content %}
-    <h2>{{ member_company['name'] }}</h2>
-    {{ member_company['about']|safe }}
-
+    <div class="subportal-about link-no-style">
+    <img class="logo-sub" src="{{ fileUrl(member_company['logo_file_id']) }}"/>
+        <h2>{{ member_company['name'] }}</h2>
+        {{ member_company['about']|safe }}
+    </div>
 {% endblock portal_content %}
