--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -346,7 +346,12 @@
     text-decoration: underline;
 }
 
-.ng-crop-rect {
+
+.ng-crop-container {
+    background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%3E%3Cpath%20fill%3D%22%23010202%22%20d%3D%22M0%206h3v3H0V6zm4%203h3V6H4v3zm4%200h3V6H8v3zm4%200h3V6h-3v3zm0-7v3h3V2h-3zM8%205h3V2H8v3zM4%205h3V2H4v3zm-4%208h3v-3H0v3zm4%200h3v-3H4v3zm4%200h3v-3H8v3z%22%2F%3E%3C%2Fsvg%3E);
+}
+
+.ng-crop-move {
     cursor: move;
     position: absolute;
     border: dashed #0d1318 thin;
@@ -356,7 +361,7 @@
     background-image: none;
 }
 
-.ng-crop-rect-corner {
+.ng-crop-resize {
     position: absolute;
     width: 10px;
     height: 10px;
@@ -367,7 +372,7 @@
 
 }
 
-.ng-crop-mouse-over {
+.ng-crop-set {
     cursor: crosshair;
     background-color: #0d1318;
     -khtml-opacity: .5;
@@ -410,12 +415,12 @@
     cursor: w-resize;
     }
 
-.ng-crop-container {
+.ng-crop-canvas {
     position: relative;
     overflow: hidden;
 }
 
-.ng-crop-container img {
+.ng-crop-canvas img {
     position: absolute;
 }
 
