--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -12,7 +12,7 @@
     {% raw %}
 
     <div style="position: relative;  width: 100%; height: 100%; padding: 5px" class="img-container cropper-bg">
-        <div style="position: relative;  width: 100%; height: 100%;" class="ng-crop-container">
+        <div style="position: relative;  width: 100%; height: 100%;" class="ng-crop-canvas">
             <img style="width: 100%; height: 100%;"/>
         </div>
     </div>
