--- a/profapp/templates/front/spring/layout.html
+++ b/profapp/templates/front/spring/layout.html
@@ -57,6 +57,13 @@
 </div>
  {% include 'footer.html' %}
 </div>
-
+{#  <script>#}
+{#        $(".block-item").mouseover(function () {#}
+{#            $(".company-about").css("display", "block");#}
+{#        });#}
+{#      $(".block-item").mouseout(function () {#}
+{#            $(".company-about").css("display", "none");#}
+{#        });#}
+{#    </script>#}
 </body>
 </html>
