--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -51,6 +51,7 @@
                 </div>
 
                 <form name="formUser" class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
+                    <h1>{{ _('Hello! dear %(data.user.profireader_first_name)s. Wa are glad to see you') }}</h1>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
                         <input pr-validation-answer="data_validation:profireader_first_name" class="form-control"
