--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -94,10 +94,11 @@
                          pr-image="data.logo_file_id" alt="image">
 
                     <div ng-if="editing">
-                        <div style="width: 400px; height: 300px; position: relative" pr-cropa="data.logo"
-                             pr-crop-coordinates="coordinates"
-                             pr-crop-image-url="{{ fileUrl(data.logo.selected_by_user.image_file_id) }}"></div>
-                        {{ rect }}
+                        <div style="width: 400px; height: 300px; position: relative" ng-crop="{{ fileUrl(data.logo.selected_by_user.image_file_id) }}"
+                             ng-crop-coordinates="coordinates"
+                             ng-crop-options="{min_aspect: 0.5, max_aspect: 2, min_width: 50, min_height: 50,
+                             max_width: 200, max_height: 200}"></div>
+                        {{ coordinates }}
                     </div>
 
                 </div>
