--- a/profapp/static/front/spring/css/style.css
+++ b/profapp/static/front/spring/css/style.css
@@ -184,18 +184,6 @@ body a:hover {
   color: #fff;
   border-bottom: 1px solid #191818;
 }
-.block-item {
-  border: 1px solid #fff;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position-x: center;
-  background-position-y: center;
-  min-height: 400px;
-}
-.block-item:hover {
-  background-color: rgba(255, 82, 82, 0.75);
-  transition: all 0.2s ease-out;
-}
 .block-item-img {
   background-position-y: center;
   width: 30%;
@@ -216,16 +204,9 @@ body a:hover {
   width: 10%;
   float: right;
 }
-.company-about {
-  margin-top: 50%;
-  background-color: #000;
-  padding-bottom: 17%;
-  max-height: 100px;
-  overflow: hidden;
-}
 .company-img {
-  min-height: 220px;
-  background-image: url(/images/drop-bg.jpg);
+  min-height: 300px;
+  background-image: url('../../../images/company_no_logo.png');
   background-size: cover;
   background-position: center;
 }
@@ -241,6 +222,7 @@ body a:hover {
   text-transform: uppercase;
   padding-left: 30px;
   margin-bottom: 0;
+  display: none;
 }
 .company-blocks h2:hover {
   background-color: rgba(0, 0, 0, 0);
@@ -253,7 +235,6 @@ body a:hover {
 }
 .about-comp {
   min-height: 100px;
-  background-color: #212121;
   max-height: 100px;
   overflow: hidden;
 }
