--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -94,11 +94,13 @@
                          pr-image="data.logo_file_id" alt="image">
 
                     <div ng-if="editing">
-                        <div style="width: 400px; height: 300px; position: relative" ng-crop="{{ fileUrl(data.logo.selected_by_user.image_file_id) }}"
-                             ng-crop-coordinates="coordinates"
-                             ng-crop-options="{min_aspect: 0.5, max_aspect: 2, min_width: 50, min_height: 50,
+                        <div style="width: 400px; height: 300px; position: relative"
+                             pr-cropperaa="data.logo"
+                             ang-crop-state="state"
+                             ang-crop-coordinates="state"
+                             apr-cropper-coordinates="coordinates"
+                             apr-cropper-options="{min_aspect: 0.5, max_aspect: 2, min_width: 150, min_height: 50,
                              max_width: 200, max_height: 200}"></div>
-                        {{ coordinates }}
                     </div>
 
                 </div>
