--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -47,7 +47,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
-                    <div style="width: 100%; height: 300px; position: relative" pr-crop="data.user.avatar"></div>
+                    <div style="width: 100%; height: 300px; position: relative" ng-crop="data.user.avatar"></div>
                 </div>
 
                 <form name="formUser" class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
